# Proj-collaborative-robotics

./: .gitignore  README.md  Yolov11_and_CLIP_example.ipynb  compute_matrix  install_ubuntu_sim.sh  notebook.ipynb
API Scripts/: Yolov11_and_CLIP_example.ipynb  cloud_speech_to_text.py  cloud_vision_test.py  combined_api.py  gemini_test.py
Docker/: Dockerfile  README.md  entrypoint.sh
Docker/galactic/: Dockerfile
Docker/humble/: Dockerfile  entrypoint.sh
ros/collab_ws/: frames_2025-03-09_18.48.53.gv  move.yaml
ros/collab_ws/src/collaborative_robotics_course/: .gitignore
ros/collab_ws/src/collaborative_robotics_course/locobot_autonomy/: CMakeLists.txt  package.xml
ros/collab_ws/src/collaborative_robotics_course/locobot_autonomy/launch/: project_launch.py
ros/collab_ws/src/collaborative_robotics_course/locobot_autonomy/locobot_autonomy/: follow_traj_hw2.py  localization.py  localization_tp.py  manip_node_v2.py  manipulation_node.py  move_A_to_B_py.py  navigation.py  node_driver.py  node_driver_with_sim.py  readme.md  simple_control.py  test_arm_move.py  test_manipulator.py
ros/collab_ws/src/collaborative_robotics_course/locobot_autonomy/locobot_autonomy/perception/: align_depth.py  camera.py  camera_sim.py  camera_with_sim.py  find_center.py  image_location_pipeline.py  readme.md  verbal.py
ros/collab_ws/src/locobot_wrapper/: CMakeLists.txt  package.xml
ros/collab_ws/src/locobot_wrapper/launch/: arm_control.launch.py  base_control_launch.py
ros/collab_ws/src/locobot_wrapper/scripts/: arm_control_wrapper.py  base_control_wrapper.py  move_gripper_action_server.py  publish_robot_description_semantic.py
ros/collab_ws/src/locobot_wrapper/scripts/utils/: align_depth_fncs.py
ros/collab_ws/src/locobot_wrapper/src/: move_arm_action_server.cpp
ros/collab_ws/src/locobot_wrapper_msgs/: CMakeLists.txt  package.xml
ros/collab_ws/src/locobot_wrapper_msgs/action/: MoveArm.action  MoveGripper.action
ros/collab_ws/src/stanford_locobot/: CMakeLists.txt  package.xml
ros/collab_ws/src/stanford_locobot/launch/: locobot.launch.py
